[package]
name = "egress-traffic-filter-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
egress-traffic-filter-common = { path = "../egress-traffic-filter-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "egress-traffic-filter"
path = "src/main.rs"
